msm: mpdecision: Add in-kernel CPU hotplug management
mach-msm: Add msm_mpdecision Kconfig & Makefile hooks

mach-msm: Add msm_mpdecision

mach-msm: mpdecision: small cleanup

mach-msm: mpdecision: add load based decision making

mach-msm: mpdecision: restructure locks, add delay

mach-msm: mpdecision: pause if CPU is unplugged outside of mpdecision

mach-msm: mpdecision: change early_suspend_level to blank_screen

mach-msm: mpdecision: don't start immediately

mach-msm: mpdecision: show cpumask after up/down

mach-msm: mpdecision: always set the suspend var

mach-msm: mpdecision: remove up/down delay, our default delay is large enough

mach-msm: mpdecision: remove debug output

mach-msm: mpdecision: add email to (c)

mach-msm: mpdecision: fix foreign hotplug/unplug detection

mach-msm: mpdecision: show how long the cpu was online

mach-msm: mpdecision: rename msm_mpdec_suspend to msm_mpdec_cpudata

mach-msm: mpdecision: add sysfs interface

mach-msm: mpdecision: increase startdelay for sense

mach-msm: mpdecision: adjust thresholds for sense

mach-msm: mpdecision: fix foreign cpu control detection

mach-msm: mpdecision: allow mpdecision to be disabled (sysfs)

mach-msm: mpdecision: increase start delay for Sense

mach-msm: mpdecision: increase up threshold for Sense

mach-msm: mpdecision: sysfs: check if cpu is offline before hotplugging it

mach-msm: mpdecision: don't turn off cpu1 if freq > idle

mach-msm: mpdecision: fixup: move idle block to mpdecision()

mach-msm: mpdecision: don't turn on cpu1 if cpu0 freq is below idle_freq

msm: mpdecision: 8960 compat

msm: mpdecision: Use the standard get_rate api

msm_mpdecision: fix check for khz/mhz value (idle_freq sysfs)

msm_mpdecision: add debug output

msm_mpdecision: make mpdecision() core independent

msm_mpdecision: make msm_mpdec_work_thread() core independent

msm_mpdecision: fix get_slowest_cpu()

msm_mpdecision: make debug output more compact & informative

msm_mpdecision: decrease startup delay

msm_mpdeci

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -398,5 +398,5 @@ obj-$(CONFIG_MSM_CPU_PWRCTL) +=  msm_cpu_pwrctl.o
 obj-$(CONFIG_ARCH_RANDOM) += early_random.o
 
 obj-$(CONFIG_CPU_FREQ_MSM) += cpufreq.o
-
+obj-$(CONFIG_MSM_MPDEC) += msm_mpdecision_8x60.o
 obj-$(CONFIG_MSM_UARTDM) += msm_hsuart.o msm_uart_dm.o
