kernel: gtod: vsyscall
Introduce kernel user helper vsyscall to allow a higher performance
gettimeofday implementation in user-space.

Change-Id: I9b9971d217382129170ecd6a35461539dac9eebb
Signed-off-by: Brent DeGraaf <bdegraaf@codeaurora.org>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -272,6 +272,13 @@ config ARCH_RANDOM
 
 	 If unsure, say N
 
+config GENERIC_TIME_VSYSCALL
+	bool "Enable gettimeofday updates"
+	depends on CPU_V7
+	help
+	  Enables updating the kernel user helper area with the xtime struct
+	  data for gettimeofday via kernel user helpers.
+
 config ARM_USE_USER_ACCESSIBLE_TIMERS
 	bool "Enables mapping a timer counter page to user space"
 	depends on USE_USER_ACCESSIBLE_TIMERS && GENERIC_TIME_VSYSCALL
