--- a/arch/arm/mach-msm/htc/Kconfig
+++ b/arch/arm/mach-msm/htc/Kconfig
@@ -32,6 +32,13 @@ config HTC_HEADSET_MGR
 	help
 	  Provides support for HTC headset manager.
 
+config HTC_HEADSET_GPIO
+	tristate "HTC GPIO headset detection driver"
+	depends on HTC_HEADSET_MGR
+	default n
+	help
+	  Provides support of HTC GPIO headset detection.
+
 config HTC_HEADSET_PMIC
 	tristate "HTC PMIC headset detection driver"
 	depends on HTC_HEADSET_MGR
