--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -931,7 +931,7 @@ config PHYS_OFFSET
 	default "0x80400000" if ARCH_MSM8960 && MACH_HTC
 	default "0x80200000" if ARCH_MSM8960 && !MACH_HTC
 	default "0x80400000" if ARCH_MSM8930 && MACH_HTC
-	default "0x80200000" if ARCH_MSM8930 && !MARCH_HTC
+	default "0x80200000" if ARCH_MSM8930 && !MACH_HTC
 	default "0x00000000" if ARCH_MSM8974
 	default "0x00000000" if ARCH_MPQ8092
 	default "0x00000000" if ARCH_MSM8226
