htc: move totemc2 folder to tc2 folder. more coherence.

--- a/arch/arm/mach-msm/htc/Makefile.board
+++ b/arch/arm/mach-msm/htc/Makefile.board
@@ -15,4 +15,4 @@ obj-$(CONFIG_MACH_JET) += jet/
 obj-$(CONFIG_MACH_VILLE) += ville/
 
 # TC2
-obj-$(CONFIG_MACH_TC2) += totemc2/
+obj-$(CONFIG_MACH_TC2) += tc2/
