--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -715,6 +715,18 @@ config SENSORS_NFC_PN544
 	help
 	  PN544 NFC driver.
 
+config AMP_RT5501
+        tristate "TI RT5501 AMP Driver"
+	depends on I2C=y
+        help
+          TI RT5501 AMP Driver implemented by HTC.
+
+config AMP_TFA9887
+        tristate "NXP TFA9887 Speaker AMP Driver"
+	depends on I2C=y
+        help
+         NXP TFA9887 Speaker AMP Driver implemented by HTC.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
