8930: build devices-8930 for 8930 machs.

--- a/arch/arm/mach-msm/htc/Makefile
+++ b/arch/arm/mach-msm/htc/Makefile
@@ -22,5 +22,7 @@ obj-$(CONFIG_HTC_HEADSET_MGR) += htc_headset_mgr.o
 obj-$(CONFIG_HTC_HEADSET_GPIO) += htc_headset_gpio.o
 obj-$(CONFIG_HTC_HEADSET_PMIC) += htc_headset_pmic.o
 obj-$(CONFIG_HTC_HEADSET_ONE_WIRE) += htc_headset_one_wire.o
-
+ifeq ($(CONFIG_MACH_HTC),y)
+obj-$(CONFIG_ARCH_MSM8930) += ../devices-8930.o
+endif
 CFLAGS_devices_htc.o += -Idrivers/staging/android
