--- a/arch/arm/configs/operaul_defconfig
+++ b/arch/arm/configs/operaul_defconfig
@@ -1257,6 +1257,8 @@ CONFIG_CABLE_DETECT_ACCESSORY=y
 # CONFIG_CABLE_DETECT_ACCESSORY_BY_ADC is not set
 # CONFIG_VP_A1028 is not set
 CONFIG_SENSORS_NFC_PN544=y
+CONFIG_AMP_RT5501=y
+CONFIG_AMP_TFA9887=y
 # CONFIG_C2PORT is not set
 
 #
