tc2: update boards/defconfigs for camera

--- a/arch/arm/configs/tc2_nocam_defconfig
+++ b/arch/arm/configs/tc2_nocam_defconfig
@@ -388,6 +388,7 @@ CONFIG_MACH_HTC=y
 # CONFIG_MACH_JET is not set
 # CONFIG_MACH_VILLE is not set
 CONFIG_MACH_TC2=y
+# CONFIG_MACH_OPERAUL is not set
 # CONFIG_MACH_HTC_DUMMY is not set
 
 #
@@ -2812,7 +2813,8 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_LP5521 is not set
 # CONFIG_LEDS_LP5523 is not set
 # CONFIG_LEDS_PCA955X is not set
-CONFIG_LEDS_PM8XXX=y
+# CONFIG_LEDS_PM8XXX is not set
+CONFIG_LEDS_PM8038=y
 # CONFIG_LEDS_PCA9633 is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_REGULATOR is not set
