tc2: Building again. Remove HDMI panel from tc2_nocam

--- a/arch/arm/configs/tc2_nocam_defconfig
+++ b/arch/arm/configs/tc2_nocam_defconfig
@@ -1265,6 +1265,8 @@ CONFIG_CABLE_DETECT_ACCESSORY=y
 CONFIG_CABLE_DETECT_ACCESSORY_BY_ADC=y
 # CONFIG_VP_A1028 is not set
 # CONFIG_SENSORS_NFC_PN544 is not set
+# CONFIG_AMP_RT5501 is not set
+# CONFIG_AMP_TFA9887 is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -2287,9 +2289,6 @@ CONFIG_FB_DEFERRED_IO=y
 #
 # Miscellaneous I2C Chip support II
 #
-CONFIG_FB_MSM_HDMI_MHL=y
-CONFIG_FB_MSM_HDMI_MHL_SII9234=y
-CONFIG_INTERNAL_CHARGING_SUPPORT=y
 CONFIG_MSM_VIDC=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
@@ -2313,7 +2312,7 @@ CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC is not set
 # CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
-CONFIG_FB_MSM_DTV=y
+# CONFIG_FB_MSM_DTV is not set
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
@@ -2412,17 +2411,12 @@ CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
 # CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL is not set
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
-# CONFIG_FB_MSM_HDMI_AS_PRIMARY is not set
 CONFIG_FB_MSM_PANEL_NONE=y
-CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
-CONFIG_FB_MSM_HDMI_COMMON=y
-CONFIG_FB_MSM_HDMI_3D=y
+# CONFIG_FB_MSM_EXT_INTERFACE_COMMON is not set
+# CONFIG_FB_MSM_HDMI_COMMON is not set
+# CONFIG_FB_MSM_HDMI_3D is not set
 # CONFIG_FB_MSM_HDMI_ADV7520_PANEL is not set
-CONFIG_FB_MSM_HDMI_MSM_PANEL=y
-# CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT is not set
-# CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT is not set
-# CONFIG_FB_MSM_HDMI_MHL_9244 is not set
-# CONFIG_FB_MSM_HDMI_MHL_8334 is not set
+# CONFIG_FB_MSM_HDMI_MSM_PANEL is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_M is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_J is not set
 # CONFIG_FB_MSM_TVOUT_PAL_BDGHIN is not set
@@ -2495,7 +2489,6 @@ CONFIG_SND_SOC=y
 # MSM SoC Audio support
 #
 CONFIG_SND_SOC_MSM_HOSTLESS_PCM=y
-CONFIG_SND_SOC_MSM_QDSP6_HDMI_AUDIO=y
 CONFIG_SND_SOC_MSM_QDSP6_INTF=y
 # CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
 CONFIG_SND_SOC_VOICE=y
