--- a/arch/arm/mach-msm/htc/operaul/Kconfig
+++ b/arch/arm/mach-msm/htc/operaul/Kconfig
@@ -3,7 +3,7 @@ config BOARD_HEADER_FILE
 	default ""
 
 config MACH_OPERAUL
-	depends on ARCH_MSM8930 && ARCH_MSM8960
+	depends on ARCH_MSM8930
 	select MACH_HTC
 	bool "HTC First"
 	help
