--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -924,14 +924,13 @@ config MSM_STACKED_MEMORY
 	  memory.  When present this memory bank is used for a high speed
 	  shared memory interface.  When not present regular RAM is used.
 
+if !MACH_HTC
 config PHYS_OFFSET
 	hex
 	default "0x40800000" if ARCH_MSM9615
 	default "0x80200000" if ARCH_APQ8064
-	default "0x80400000" if ARCH_MSM8960 && MACH_HTC
-	default "0x80200000" if ARCH_MSM8960 && !MACH_HTC
-	default "0x80400000" if ARCH_MSM8930 && MACH_HTC
-	default "0x80200000" if ARCH_MSM8930 && !MACH_HTC
+	default "0x80200000" if ARCH_MSM8930
+	default "0x80200000" if ARCH_MSM8960
 	default "0x00000000" if ARCH_MSM8974
 	default "0x00000000" if ARCH_MPQ8092
 	default "0x00000000" if ARCH_MSM8226
@@ -942,6 +941,11 @@ config PHYS_OFFSET
 	default "0x20000000" if ARCH_QSD8X50
 	default "0x40200000" if ARCH_MSM8X60
 	default "0x10000000"
+endif
+
+if MACH_HTC
+source "arch/arm/mach-msm/htc/Kconfig.offsets"
+endif
 
 config KERNEL_MSM_CONTIG_MEM_REGION
 	bool "Enable in-kernel contiguous memory region"
