--- a/arch/arm/configs/m4_defconfig
+++ b/arch/arm/configs/m4_defconfig
@@ -2371,7 +2371,6 @@ CONFIG_FB_VIRTUAL=y
 #
 # Miscellaneous I2C Chip support II
 #
-# CONFIG_FB_MSM_HDMI_MHL is not set
 CONFIG_MSM_VIDC=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
@@ -2395,7 +2394,7 @@ CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC is not set
 # CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
-CONFIG_FB_MSM_DTV=y
+# CONFIG_FB_MSM_DTV is not set
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
@@ -2405,16 +2404,12 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL is not set
-CONFIG_FB_MSM_MIPI_DSI_TOSHIBA=y
+# CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
 # CONFIG_FB_MSM_MIPI_DSI_LGIT is not set
-CONFIG_FB_MSM_MIPI_DSI_RENESAS=y
-CONFIG_FB_MSM_MIPI_DSI_TRULY=y
-CONFIG_FB_MSM_MIPI_DSI_SIMULATOR=y
-CONFIG_FB_MSM_MIPI_DSI_NOVATEK=y
-CONFIG_FB_MSM_MIPI_DSI_NT35510=y
-CONFIG_FB_MSM_MIPI_DSI_ORISE=y
-CONFIG_FB_MSM_MIPI_DSI_NT35516=y
-CONFIG_FB_MSM_MIPI_DSI_NT35590=y
+# CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
+# CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
+# CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
+# CONFIG_FB_MSM_MIPI_DSI_ORISE is not set
 CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
@@ -2433,25 +2428,24 @@ CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_WXGA is not set
 # CONFIG_FB_MSM_MIPI_LGIT_VIDEO_WXGA_PT is not set
 # CONFIG_FB_MSM_LVDS_CHIMEI_WXGA is not set
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA=y
-CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT=y
-CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT=y
-CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT=y
-CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT=y
-CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_NT35510_CMD_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_NT35516_VIDEO_QHD_PT=y
-CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT=y
-CONFIG_FB_MSM_MIPI_NT35590_CMD_720P_PT=y
-CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT=y
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA is not set
+# CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT is not set
+# CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT is not set
+# CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35510_CMD_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35516_VIDEO_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35590_CMD_720P_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT is not set
 CONFIG_FB_MSM_MIPI_CHIMEI_WXGA=y
 CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA=y
-CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO=y
+# CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 # CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
@@ -2469,7 +2463,7 @@ CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
 # CONFIG_FB_MSM_LVDS_CHIMEI_WXGA_PANEL is not set
 # CONFIG_FB_MSM_LVDS_FRC_FHD_PANEL is not set
 # CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
-CONFIG_FB_MSM_MIPI_PANEL_DETECT=y
+# CONFIG_FB_MSM_MIPI_PANEL_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT is not set
@@ -2500,17 +2494,12 @@ CONFIG_FB_MSM_MIPI_PANEL_DETECT=y
 # CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL is not set
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
-# CONFIG_FB_MSM_HDMI_AS_PRIMARY is not set
-# CONFIG_FB_MSM_PANEL_NONE is not set
-CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
-CONFIG_FB_MSM_HDMI_COMMON=y
-CONFIG_FB_MSM_HDMI_3D=y
+CONFIG_FB_MSM_PANEL_NONE=y
+# CONFIG_FB_MSM_EXT_INTERFACE_COMMON is not set
+# CONFIG_FB_MSM_HDMI_COMMON is not set
+# CONFIG_FB_MSM_HDMI_3D is not set
 # CONFIG_FB_MSM_HDMI_ADV7520_PANEL is not set
-CONFIG_FB_MSM_HDMI_MSM_PANEL=y
-# CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT is not set
-# CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT is not set
-# CONFIG_FB_MSM_HDMI_MHL_9244 is not set
-# CONFIG_FB_MSM_HDMI_MHL_8334 is not set
+# CONFIG_FB_MSM_HDMI_MSM_PANEL is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_M is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_J is not set
 # CONFIG_FB_MSM_TVOUT_PAL_BDGHIN is not set
@@ -2583,7 +2572,6 @@ CONFIG_SND_SOC=y
 # MSM SoC Audio support
 #
 CONFIG_SND_SOC_MSM_HOSTLESS_PCM=y
-CONFIG_SND_SOC_MSM_QDSP6_HDMI_AUDIO=y
 CONFIG_SND_SOC_MSM_QDSP6_INTF=y
 # CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
 CONFIG_SND_SOC_VOICE=y
