pyramid: splitted board into pmic/regulator sub-boards (WIP)

--- a/arch/arm/mach-msm/htc/pyramid/Makefile
+++ b/arch/arm/mach-msm/htc/pyramid/Makefile
@@ -3,5 +3,7 @@ obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-gpiomux.o
 obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-keypad.o
 obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-mmc.o
 obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-wifi.o
+obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-regulator.o
+obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-pmic.o
 obj-$(CONFIG_MACH_PYRAMID) += display/
 
