tps65200 charger driver

--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -944,6 +944,15 @@ config MFD_PM8821_IRQ
 
 	  This is required to use certain other PM 8821 features, such as MPPs.
 
+config TPS65200
+        tristate "tps65200 Driver"
+        depends on I2C
+        help
+         TPS65200 Switch charger implemented by HTC.
+         This could enable battery driver to set
+         Charging current 100mA~500mA or 500mA~1000mA
+         by GPIO or Register
+
 config TPS65911_COMPARATOR
 	tristate
 
