pyramid: update boards, clean up gpiomux/pmic, add usb regulators into regulators board, fix CONFIG names for BATT

--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -402,7 +402,9 @@ CONFIG_MACH_HTC_DUMMY=y
 #
 # HTC Specific Patches
 #
-# CONFIG_HTC_BATT_CORE is not set
+CONFIG_HTC_BATT_CORE=y
+CONFIG_HTC_BATT_8x60=y
+# CONFIG_HTC_BATT_8960 is not set
 CONFIG_HTC_HEADSET_MGR=y
 CONFIG_HTC_HEADSET_GPIO=y
 CONFIG_HTC_HEADSET_PMIC=y
@@ -480,7 +482,7 @@ CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 # CONFIG_MSM_DMA_TEST is not set
 CONFIG_WIFI_CONTROL_FUNC=y
-CONFIG_WIFI_MEM_PREALLOC=y
+# CONFIG_WIFI_MEM_PREALLOC is not set
 CONFIG_SURF_FFA_GPIO_KEYPAD=y
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 # CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
@@ -492,7 +494,7 @@ CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
-CONFIG_MSM_PIL_MODEM=y
+# CONFIG_MSM_PIL_MODEM is not set
 CONFIG_MSM_PIL_QDSP6V3=y
 # CONFIG_MSM_PIL_QDSP6V4 is not set
 # CONFIG_MSM_PIL_LPASS_QDSP6V5 is not set
@@ -654,7 +656,7 @@ CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HIGHMEM=y
 # CONFIG_HIGHPTE is not set
 CONFIG_HW_PERF_EVENTS=y
-CONFIG_VMALLOC_RESERVE=0x25600000
+CONFIG_VMALLOC_RESERVE=0x25800000
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
 CONFIG_FLATMEM=y
@@ -670,7 +672,7 @@ CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ENABLE_DMM is not set
@@ -1612,6 +1614,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
+CONFIG_TOUCHSCREEN_CYPRESS_TMA=y
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_3K is not set
 CONFIG_INPUT_MISC=y
@@ -1803,6 +1806,7 @@ CONFIG_SPI_MASTER=y
 # CONFIG_SPI_ALTERA is not set
 # CONFIG_SPI_BITBANG is not set
 # CONFIG_SPI_GPIO is not set
+CONFIG_SPI_AIC3254=y
 # CONFIG_SPI_OC_TINY is not set
 # CONFIG_SPI_PXA2XX_PCI is not set
 # CONFIG_SPI_XILINX is not set
@@ -2084,6 +2088,7 @@ CONFIG_MFD_PM8XXX=y
 # CONFIG_MFD_PM8038_CORE is not set
 CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_PM8821_IRQ is not set
+CONFIG_TPS65200=y
 # CONFIG_MFD_TPS65090 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
 CONFIG_MFD_PM8XXX_DEBUG=y
@@ -2318,7 +2323,7 @@ CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_2D=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
-CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=24
+CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=32
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 # CONFIG_VGASTATE is not set
@@ -2975,6 +2980,7 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_QCACHE=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
@@ -3464,6 +3470,8 @@ CONFIG_LIBCRC32C=y
 CONFIG_AUDIT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
+CONFIG_LZO_COMPRESS=y
+CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
