--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -85,3 +85,5 @@ obj-$(CONFIG_VP_A1028)		+= a1028.o
 obj-$(CONFIG_SENSORS_NFC_PN544)	+= pn544.o
 obj-$(CONFIG_AMP_TFA9887)	+= tfa9887.o
 obj-$(CONFIG_AMP_RT5501)        += rt5501.o
+obj-$(CONFIG_INPUT_ISL29028)	+= isl29028.o
+obj-$(CONFIG_INPUT_ISL29029)	+= isl29029.o
