HTC 8X60 AUDIO: Added htc_acoustic_8x60 Added a new CONFIG flag: CONFIG_MSM8X60_AUDIO_1X that compiles htc version of qdsp6v2 (qdsp6v2_1x)

--- a/sound/soc/Makefile
+++ b/sound/soc/Makefile
@@ -16,7 +16,11 @@ obj-$(CONFIG_SND_SOC)	+= fsl/
 obj-$(CONFIG_SND_SOC)   += imx/
 obj-$(CONFIG_SND_SOC)	+= jz4740/
 obj-$(CONFIG_SND_SOC)	+= mid-x86/
-obj-$(CONFIG_SND_SOC)	+= msm/
+ifeq ($(CONFIG_MSM8X60_AUDIO_1X),y)
+obj-$(CONFIG_SND_SOC)   += msm_1x/
+else
+ obj-$(CONFIG_SND_SOC)   += msm/
+endif
 obj-$(CONFIG_SND_SOC)	+= mxs/
 obj-$(CONFIG_SND_SOC)	+= nuc900/
 obj-$(CONFIG_SND_SOC)	+= omap/
