--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1719,6 +1719,13 @@ config MSM8X60_AUDIO
 	help
 	  Enable support for qdsp6v2. This provides audio functionality.
 
+config MSM8X60_AUDIO_1X
+	tristate "MSM8X60 audio support"
+	depends on ARCH_MSM8X60 && ANDROID_PMEM
+	default y
+	help
+	  Enable support for qdsp6v2. This provides audio functionality.
+
 config MSM8X60_FTM_AUDIO_DEVICES
 	bool "MSM8X60 audio factory test mode support"
 	depends on MSM8X60_AUDIO
