pyramid: enabled sound

--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -478,6 +478,7 @@ CONFIG_MSM_DALRPC=y
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 # CONFIG_MSM8X60_AUDIO is not set
+CONFIG_MSM8X60_AUDIO_1X=y
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 # CONFIG_MSM_DMA_TEST is not set
@@ -1196,6 +1197,9 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
+CONFIG_REGMAP=y
+CONFIG_REGMAP_I2C=y
+CONFIG_REGMAP_SPI=y
 CONFIG_DMA_SHARED_BUFFER=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
@@ -2528,6 +2532,7 @@ CONFIG_SND_TIMER=y
 CONFIG_SND_PCM=y
 CONFIG_SND_HWDEP=y
 CONFIG_SND_RAWMIDI=y
+CONFIG_SND_JACK=y
 # CONFIG_SND_SEQUENCER is not set
 # CONFIG_SND_MIXER_OSS is not set
 # CONFIG_SND_PCM_OSS is not set
@@ -2555,7 +2560,26 @@ CONFIG_SND_USB_AUDIO=y
 # CONFIG_SND_USB_UA101 is not set
 # CONFIG_SND_USB_CAIAQ is not set
 # CONFIG_SND_USB_6FIRE is not set
-# CONFIG_SND_SOC is not set
+CONFIG_SND_SOC=y
+
+#
+# MSM SoC Audio support
+#
+CONFIG_SND_SOC_MSM8X60_PCM=y
+CONFIG_SND_SOC_MSM8X60_DAI=y
+CONFIG_SND_SOC_MSM8X60=y
+# CONFIG_MSM_8x60_VOIP is not set
+CONFIG_SND_SOC_MSM_QDSP6_INTF=y
+# CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
+# CONFIG_SND_SOC_VOICE is not set
+# CONFIG_SND_SOC_QDSP6 is not set
+# CONFIG_SND_SOC_QDSP6V2 is not set
+# CONFIG_SND_SOC_MSM8660_APQ is not set
+# CONFIG_SND_SOC_DUAL_AMIC is not set
+CONFIG_SND_SOC_I2C_AND_SPI=y
+# CONFIG_SND_SOC_ALL_CODECS is not set
+# CONFIG_SND_SOC_TPA2028D is not set
+CONFIG_SND_SOC_TPA2051D3=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2809,7 +2833,7 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=64
 # CONFIG_MMC_BLOCK_BOUNCE is not set
-CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
+# CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 
