pyramid: cleanup board. added ext_5v vreg, added rfkill board and what's needed for bluetooth (even tho it's still flakey, maybe usespace?) ..

--- a/arch/arm/mach-msm/htc/pyramid/Makefile
+++ b/arch/arm/mach-msm/htc/pyramid/Makefile
@@ -6,5 +6,6 @@ obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-wifi.o
 obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-regulator.o
 obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-pmic.o
 obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-audio.o
+obj-$(CONFIG_MACH_PYRAMID) += board-pyramid-rfkill.o
 obj-$(CONFIG_MACH_PYRAMID) += display/
 
