--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -408,7 +408,7 @@ CONFIG_HTC_BATT_8x60=y
 CONFIG_HTC_HEADSET_MGR=y
 CONFIG_HTC_HEADSET_GPIO=y
 CONFIG_HTC_HEADSET_PMIC=y
-CONFIG_HTC_HEADSET_ONE_WIRE=y
+# CONFIG_HTC_HEADSET_ONE_WIRE is not set
 CONFIG_MSM_STACKED_MEMORY=y
 CONFIG_KERNEL_MSM_CONTIG_MEM_REGION=y
 CONFIG_KERNEL_PMEM_SMI_REGION=y
@@ -446,7 +446,7 @@ CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_MSM_SMD=y
 # CONFIG_MSM_SMD_PKG3 is not set
 CONFIG_MSM_SMD_PKG4=y
-# CONFIG_MSM_SMD_DEBUG is not set
+CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 # CONFIG_MSM_RESET_MODEM is not set
@@ -501,9 +501,9 @@ CONFIG_MSM_PIL_QDSP6V3=y
 # CONFIG_MSM_PIL_LPASS_QDSP6V5 is not set
 # CONFIG_MSM_PIL_MSS_QDSP6V5 is not set
 # CONFIG_MSM_PIL_RIVA is not set
-CONFIG_MSM_PIL_TZAPPS=y
+# CONFIG_MSM_PIL_TZAPPS is not set
 CONFIG_MSM_PIL_DSPS=y
-CONFIG_MSM_PIL_VIDC=y
+# CONFIG_MSM_PIL_VIDC is not set
 # CONFIG_MSM_PIL_VENUS is not set
 # CONFIG_MSM_PIL_GSS is not set
 # CONFIG_MSM_PIL_PRONTO is not set
@@ -1145,7 +1145,6 @@ CONFIG_BT_HIDP=y
 # CONFIG_BT_HCIUART is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
-# CONFIG_BT_MSM_SLEEP is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
@@ -1278,6 +1277,8 @@ CONFIG_CABLE_DETECT_ACCESSORY_BY_ADC=y
 # CONFIG_SENSORS_NFC_PN544 is not set
 # CONFIG_AMP_RT5501 is not set
 # CONFIG_AMP_TFA9887 is not set
+CONFIG_INPUT_ISL29028=y
+CONFIG_INPUT_ISL29029=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1701,7 +1702,6 @@ CONFIG_LEGACY_PTYS=y
 CONFIG_LEGACY_PTY_COUNT=256
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_N_GSM is not set
-# CONFIG_N_SMUX is not set
 # CONFIG_TRACE_SINK is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
@@ -1719,7 +1719,8 @@ CONFIG_LEGACY_PTY_COUNT=256
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_MSM is not set
-CONFIG_SERIAL_MSM_HS=y
+# CONFIG_SERIAL_MSM_HS is not set
+CONFIG_SERIAL_MSM_HS_BRCM=y
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 # CONFIG_SERIAL_BCM_BT_LPM is not set
@@ -2366,6 +2367,9 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 #
 # Miscellaneous I2C Chip support II
 #
+CONFIG_FB_MSM_HDMI_MHL=y
+CONFIG_FB_MSM_HDMI_MHL_SII9234=y
+CONFIG_INTERNAL_CHARGING_SUPPORT=y
 CONFIG_MSM_VIDC=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
@@ -2389,7 +2393,7 @@ CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC is not set
 # CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
-# CONFIG_FB_MSM_DTV is not set
+CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
@@ -2488,12 +2492,17 @@ CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
 # CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL is not set
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
+# CONFIG_FB_MSM_HDMI_AS_PRIMARY is not set
 CONFIG_FB_MSM_PANEL_NONE=y
-# CONFIG_FB_MSM_EXT_INTERFACE_COMMON is not set
-# CONFIG_FB_MSM_HDMI_COMMON is not set
-# CONFIG_FB_MSM_HDMI_3D is not set
+CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
+CONFIG_FB_MSM_HDMI_COMMON=y
+CONFIG_FB_MSM_HDMI_3D=y
 # CONFIG_FB_MSM_HDMI_ADV7520_PANEL is not set
-# CONFIG_FB_MSM_HDMI_MSM_PANEL is not set
+CONFIG_FB_MSM_HDMI_MSM_PANEL=y
+# CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT is not set
+# CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT is not set
+# CONFIG_FB_MSM_HDMI_MHL_9244 is not set
+# CONFIG_FB_MSM_HDMI_MHL_8334 is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_M is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_J is not set
 # CONFIG_FB_MSM_TVOUT_PAL_BDGHIN is not set
@@ -2568,6 +2577,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8X60_PCM=y
 CONFIG_SND_SOC_MSM8X60_DAI=y
 CONFIG_SND_SOC_MSM8X60=y
+CONFIG_SND_SOC_MSM_QDSP6_HDMI_AUDIO=y
 # CONFIG_MSM_8x60_VOIP is not set
 CONFIG_SND_SOC_MSM_QDSP6_INTF=y
 # CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
@@ -2802,8 +2812,8 @@ CONFIG_USB_G_ANDROID=y
 CONFIG_USB_CSW_HACK=y
 # CONFIG_USB_MSC_PROFILING is not set
 CONFIG_MODEM_SUPPORT=y
-CONFIG_RMNET_SMD_CTL_CHANNEL="DATA40_CNTL"
-CONFIG_RMNET_SMD_DATA_CHANNEL="DATA40"
+CONFIG_RMNET_SMD_CTL_CHANNEL=""
+CONFIG_RMNET_SMD_DATA_CHANNEL=""
 # CONFIG_USB_ANDROID_RMNET_CTRL_SMD is not set
 # CONFIG_USB_ANDROID_CDC_ECM is not set
 
