HP: prepare for HP devices

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -311,6 +311,8 @@ obj-$(CONFIG_MACH_LGE) += lge/
 
 obj-$(CONFIG_MACH_HTC) += htc/
 
+obj-$(CONFIG_MACH_HP) += hp/
+
 CFLAGS_msm_vibrator.o += -Idrivers/staging/android
 CFLAGS_board-9615.o += -Idrivers/usb/gadget
 
