--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -916,6 +916,8 @@ source "arch/arm/mach-msm/lge/Kconfig"
 
 source "arch/arm/mach-msm/htc/Kconfig"
 
+source "arch/arm/mach-msm/hp/Kconfig"
+
 config MSM_STACKED_MEMORY
 	bool "Stacked Memory"
 	default y
@@ -924,7 +926,7 @@ config MSM_STACKED_MEMORY
 	  memory.  When present this memory bank is used for a high speed
 	  shared memory interface.  When not present regular RAM is used.
 
-if !MACH_HTC
+if !MACH_HTC && !MACH_HP
 config PHYS_OFFSET
 	hex
 	default "0x40800000" if ARCH_MSM9615
@@ -945,6 +947,10 @@ endif
 
 if MACH_HTC
 source "arch/arm/mach-msm/htc/Kconfig.offsets"
+endif
+
+if MACH_HP
+source "arch/arm/mach-msm/hp/Kconfig.offsets"
 endif
 
 config KERNEL_MSM_CONTIG_MEM_REGION
