--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -712,4 +712,23 @@ config SENSORS_R3GD20
 
 	  Say Y here if you have a device containing the r3gd20 chip.
 
+config INPUT_LSM303DLH
+	tristate "ST LSM303DLH 3-axis accelerometer and 3-axis magnetometer"
+	depends on I2C
+    depends on INPUT_POLLDEV
+	default n
+	help
+	  This driver provides support for the LSM303DLH chip which includes a
+	  3-axis accelerometer and a 3-axis magnetometer.
+
+config INPUT_ISL29023
+	tristate "Intersil ISL29023 ambient light sensor"
+	depends on I2C && SYSFS
+	help
+	  If you say yes here you get support for the Intersil ISL29023
+	  ambient light sensor.
+
+	  This driver can also be built as a module.  If so, the module
+	  will be called isl29023.
+
 source "drivers/input/misc/mpu3050/Kconfig"
