--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -88,3 +88,4 @@ obj-$(CONFIG_AMP_RT5501)        += rt5501.o
 obj-$(CONFIG_INPUT_ISL29028)	+= isl29028.o
 obj-$(CONFIG_INPUT_ISL29029)	+= isl29029.o
 obj-$(CONFIG_KERNEL_LOG)	+= klog.o
+obj-$(CONFIG_HSUART)		+= hsuart.o hsuart_tty.o
