Kconfig: HP devices (tenderloin) uses LCDC

--- a/arch/arm/mach-msm/hp/Kconfig
+++ b/arch/arm/mach-msm/hp/Kconfig
@@ -1,6 +1,6 @@
 config MACH_HP
 	bool
-	select FB_MSM_MIPI_DSI
+	select FB_MSM_LCDC
 
 menu "HP Board Selection"
 source "arch/arm/mach-msm/hp/Kconfig.board"
