tenderloin: update boards/defconfig. For now display isn't good.

--- a/arch/arm/mach-msm/hp/tenderloin/Makefile
+++ b/arch/arm/mach-msm/hp/tenderloin/Makefile
@@ -1,11 +1,9 @@
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-gpiomux.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-keypad.o
-obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-mmc.o
-#obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-wifi.o
-#obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-rfkill.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-regulator.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-pmic.o
-#obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-audio.o
-#obj-$(CONFIG_MACH_TENDERLOIN) += display/
+obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-ts.o
+obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-usb.o
+obj-$(CONFIG_MACH_TENDERLOIN) += display/
 
