--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -353,9 +353,9 @@ CONFIG_MSM_ADM3=y
 #
 # CONFIG_HTC_BATT_CORE is not set
 # CONFIG_HTC_HEADSET_MGR is not set
-# CONFIG_CABLE_DETECT_8XXX is not set
-# CONFIG_CABLE_DETECT_ACCESSORY is not set
-# CONFIG_CABLE_DETECT_ACCESSORY_BY_ADC is not set
+CONFIG_CABLE_DETECT_8XXX=y
+CONFIG_CABLE_DETECT_ACCESSORY=y
+CONFIG_CABLE_DETECT_ACCESSORY_BY_ADC=y
 CONFIG_MACH_HP=y
 
 #
@@ -492,6 +492,7 @@ CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_DCVS is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
+CONFIG_MSM_UARTDM=y
 
 #
 # System MMU
@@ -688,7 +689,6 @@ CONFIG_WAKELOCK_STAT=y
 CONFIG_USER_WAKELOCK=y
 CONFIG_EARLYSUSPEND=y
 # CONFIG_NO_USER_SPACE_SCREEN_ACCESS_CONTROL is not set
-# CONFIG_CONSOLE_EARLYSUSPEND is not set
 CONFIG_FB_EARLYSUSPEND=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
@@ -931,7 +931,7 @@ CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 CONFIG_IP_NF_TARGET_ECN=y
 CONFIG_IP_NF_TARGET_TTL=y
-# CONFIG_IP_NF_RAW is not set
+CONFIG_IP_NF_RAW=y
 # CONFIG_IP_NF_SECURITY is not set
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_ARPFILTER=y
@@ -1128,7 +1128,9 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_SYS_HYPERVISOR is not set
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
-# CONFIG_SYNC is not set
+CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
+# CONFIG_SW_SYNC_USER is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
@@ -1186,6 +1188,9 @@ CONFIG_PMIC8058_XOADC=y
 # CONFIG_INPUT_ISL29029 is not set
 # CONFIG_AMP_TPA2051D3 is not set
 CONFIG_KERNEL_LOG=y
+CONFIG_HSUART=y
+CONFIG_NDUID=y
+CONFIG_USER_PINS=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1259,7 +1264,9 @@ CONFIG_DM_MIRROR=y
 # CONFIG_DM_RAID is not set
 # CONFIG_DM_LOG_USERSPACE is not set
 # CONFIG_DM_ZERO is not set
-# CONFIG_DM_MULTIPATH is not set
+CONFIG_DM_MULTIPATH=y
+CONFIG_DM_MULTIPATH_QL=y
+CONFIG_DM_MULTIPATH_ST=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
@@ -1468,6 +1475,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_CY8C_TS is not set
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_TMA is not set
+CONFIG_TOUCHSCREEN_CY8CTMA395=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATI_REMOTE is not set
@@ -1485,7 +1493,7 @@ CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_ADXL34X is not set
 # CONFIG_INPUT_CMA3000 is not set
-# CONFIG_PMIC8058_OTHC is not set
+CONFIG_PMIC8058_OTHC=y
 # CONFIG_BOSCH_BMA150 is not set
 CONFIG_MPU_SENSORS_MPU3050=y
 # CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
@@ -1512,6 +1520,8 @@ CONFIG_MPU_SENSORS_AK8975=y
 # CONFIG_MPU_SENSORS_HSCDTD004A is not set
 # CONFIG_MPU_SENSORS_TIMERIRQ is not set
 # CONFIG_MPU_SENSORS_DEBUG is not set
+CONFIG_INPUT_LSM303DLH=y
+CONFIG_INPUT_ISL29023=y
 
 #
 # Hardware I/O ports
@@ -1527,11 +1537,7 @@ CONFIG_SERIO_LIBPS2=y
 #
 # Character devices
 #
-CONFIG_VT=y
-CONFIG_CONSOLE_TRANSLATIONS=y
-CONFIG_VT_CONSOLE=y
-CONFIG_HW_CONSOLE=y
-# CONFIG_VT_HW_CONSOLE_BINDING is not set
+# CONFIG_VT is not set
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
 CONFIG_LEGACY_PTYS=y
@@ -1539,8 +1545,8 @@ CONFIG_LEGACY_PTY_COUNT=256
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
-CONFIG_DEVMEM=y
-CONFIG_DEVKMEM=y
+# CONFIG_DEVMEM is not set
+# CONFIG_DEVKMEM is not set
 
 #
 # Serial drivers
@@ -1712,6 +1718,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_BQ27520 is not set
 # CONFIG_BATTERY_BQ27541 is not set
 # CONFIG_LTC4088_CHARGER is not set
+CONFIG_MAX8903B_CHARGER=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_SENSORS_WPCE775X is not set
@@ -1863,13 +1870,13 @@ CONFIG_MFD_PM8XXX=y
 CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_TPS65910 is not set
 # CONFIG_TPS65200 is not set
-# CONFIG_MFD_PM8XXX_DEBUG is not set
+CONFIG_MFD_PM8XXX_DEBUG=y
 # CONFIG_MFD_PM8XXX_PWM is not set
-# CONFIG_MFD_PM8XXX_MISC is not set
-# CONFIG_MFD_PM8XXX_BATT_ALARM is not set
+CONFIG_MFD_PM8XXX_MISC=y
+CONFIG_MFD_PM8XXX_BATT_ALARM=y
 # CONFIG_WCD9310_CODEC is not set
 CONFIG_REGULATOR=y
-# CONFIG_REGULATOR_DEBUG is not set
+CONFIG_REGULATOR_DEBUG=y
 # CONFIG_REGULATOR_DUMMY is not set
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
@@ -1890,7 +1897,7 @@ CONFIG_REGULATOR_PMIC8058=y
 CONFIG_REGULATOR_PMIC8901=y
 CONFIG_REGULATOR_PM8XXX=y
 # CONFIG_REGULATOR_GPIO is not set
-CONFIG_REGULATOR_PM8058_XO=y
+# CONFIG_REGULATOR_PM8058_XO is not set
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -2021,7 +2028,6 @@ CONFIG_VIDEO_IR_I2C=y
 #
 # CONFIG_VIDEO_THS7303 is not set
 # CONFIG_VIDEO_M52790 is not set
-# CONFIG_VIDEO_VIVI is not set
 # CONFIG_VIDEO_CPIA2 is not set
 # CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_VIDEO_NOON010PC30 is not set
@@ -2166,8 +2172,8 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_MDP_NONE is not set
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
-CONFIG_FB_MSM_MIPI_DSI=y
-# CONFIG_FB_MSM_LCDC is not set
+# CONFIG_FB_MSM_MIPI_DSI is not set
+CONFIG_FB_MSM_LCDC=y
 CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_FB_MSM_MDP_ADDITIONAL_BUS_SCALING is not set
 # CONFIG_FB_MSM_DTV is not set
@@ -2221,7 +2227,7 @@ CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 # CONFIG_FB_MSM_NO_MDP_PIPE_CTRL is not set
-# CONFIG_FB_MSM_OVERLAY0_WRITEBACK is not set
+CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 # CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
@@ -2291,21 +2297,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 # Display device support
 #
 # CONFIG_DISPLAY_SUPPORT is not set
-
-#
-# Console display driver support
-#
-CONFIG_DUMMY_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
-# CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
-# CONFIG_FONTS is not set
-CONFIG_FONT_8x8=y
-CONFIG_FONT_8x16=y
-CONFIG_LOGO=y
-CONFIG_LOGO_LINUX_MONO=y
-CONFIG_LOGO_LINUX_VGA16=y
-CONFIG_LOGO_LINUX_CLUT224=y
+# CONFIG_LOGO is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
@@ -2437,15 +2429,16 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_EHSET=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 # CONFIG_USB_EHCI_TT_NEWSCHED is not set
-CONFIG_USB_EHCI_MSM=y
+# CONFIG_USB_EHCI_MSM is not set
 # CONFIG_USB_EHCI_MSM_HSIC is not set
 # CONFIG_USB_OXU210HP_HCD is not set
+CONFIG_USB_EHCI_MSM_72K=y
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1760_HCD is not set
 # CONFIG_USB_ISP1362_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
-# CONFIG_USB_PEHCI_HCD is not set
+CONFIG_USB_PEHCI_HCD=y
 # CONFIG_USB_HWA_HCD is not set
 # CONFIG_USB_MUSB_HDRC is not set
 
@@ -2580,9 +2573,9 @@ CONFIG_USB_GADGET_SELECTED=y
 # CONFIG_USB_GADGET_R8A66597 is not set
 # CONFIG_USB_GADGET_PXA_U2O is not set
 # CONFIG_USB_GADGET_M66592 is not set
-CONFIG_USB_GADGET_CI13XXX_MSM=y
-CONFIG_USB_CI13XXX_MSM=y
-# CONFIG_USB_GADGET_MSM_72K is not set
+# CONFIG_USB_GADGET_CI13XXX_MSM is not set
+CONFIG_USB_GADGET_MSM_72K=y
+CONFIG_USB_MSM_72K=y
 # CONFIG_USB_GADGET_DUMMY_HCD is not set
 CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_ZERO is not set
@@ -2616,9 +2609,10 @@ CONFIG_USB_OTG_UTILS=y
 # CONFIG_USB_OTG_WAKELOCK is not set
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ULPI is not set
-# CONFIG_USB_MSM_OTG_72K is not set
+CONFIG_USB_MSM_OTG_72K=y
+# CONFIG_MSM_OTG_ENABLE_A_WAIT_BCON_TIMEOUT is not set
 # CONFIG_NOP_USB_XCEIV is not set
-CONFIG_USB_MSM_OTG=y
+# CONFIG_USB_MSM_OTG is not set
 # CONFIG_USB_MSM_ACA is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
@@ -2677,7 +2671,7 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_MSM_PMIC is not set
 # CONFIG_LEDS_PMIC8058 is not set
-# CONFIG_LEDS_PM8058 is not set
+CONFIG_LEDS_PM8058=y
 # CONFIG_LEDS_LT3593 is not set
 # CONFIG_LEDS_TRIGGERS is not set
 
@@ -2803,7 +2797,6 @@ CONFIG_MACH_NO_WESTBRIDGE=y
 #
 # Speakup console speech
 #
-# CONFIG_SPEAKUP is not set
 # CONFIG_TOUCHSCREEN_CLEARPAD_TM1217 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 
@@ -2831,12 +2824,12 @@ CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT3_FS_XATTR=y
 # CONFIG_EXT3_FS_POSIX_ACL is not set
-# CONFIG_EXT3_FS_SECURITY is not set
+CONFIG_EXT3_FS_SECURITY=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_XATTR=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
-# CONFIG_EXT4_FS_SECURITY is not set
-# CONFIG_EXT4_DEBUG is not set
+CONFIG_EXT4_FS_SECURITY=y
+CONFIG_EXT4_DEBUG=y
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
