--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -91,3 +91,5 @@ obj-$(CONFIG_KERNEL_LOG)	+= klog.o
 obj-$(CONFIG_HSUART)		+= hsuart.o hsuart_tty.o
 obj-$(CONFIG_NDUID)		+= nduid.o
 obj-$(CONFIG_USER_PINS)		+= user-pins.o
+obj-$(CONFIG_HRES_COUNTER)	+= hres_counter.o
+obj-$(CONFIG_A6)		+= a6/
