--- a/arch/arm/mach-msm/hp/tenderloin/Makefile
+++ b/arch/arm/mach-msm/hp/tenderloin/Makefile
@@ -5,5 +5,7 @@ obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-regulator.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-pmic.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-ts.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-usb.o
+obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-a6.o
+obj-$(CONFIG_MACH_TENDERLOIN) += a6_sbw_impl_tenderloin.o
 obj-$(CONFIG_MACH_TENDERLOIN) += display/
 
