video/msm: build dss_io_8x60 for 7x30 (for now)

--- a/drivers/video/msm/Makefile
+++ b/drivers/video/msm/Makefile
@@ -51,6 +51,7 @@ obj-y += mdp_cursor.o
 obj-y += mdp_dma_tv.o
 obj-$(CONFIG_ARCH_MSM7X27A) += msm_dss_io_7x27a.o
 obj-$(CONFIG_ARCH_MSM8X60) += msm_dss_io_8x60.o
+obj-$(CONFIG_ARCH_MSM7X30) += msm_dss_io_8x60.o
 obj-$(CONFIG_ARCH_MSM8960) += msm_dss_io_8960.o
 
 # EBI2
