--- a/arch/arm/mach-msm/htc/Makefile.board
+++ b/arch/arm/mach-msm/htc/Makefile.board
@@ -25,3 +25,6 @@ obj-$(CONFIG_MACH_M4_UL) += m4ul/
 
 # PYRAMID
 obj-$(CONFIG_MACH_PYRAMID) += pyramid/
+
+# VISION
+obj-$(CONFIG_MACH_VISION) += vision/
