--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -71,3 +71,5 @@ obj-$(CONFIG_SENSORS_R3GD20)		+= r3gd20.o
 obj-y 					+= mpu3050/
 obj-$(CONFIG_INPUT_LSM303DLH)		+= lsm303dlh_mag_sysfs.o lsm303dlh_acc_sysfs.o
 obj-$(CONFIG_INPUT_ISL29023)		+= isl29023.o
+obj-$(CONFIG_LIGHTSENSOR_MICROP)	+= cm3602_lightsensor_microp.o
+obj-$(CONFIG_INPUT_CAPELLA_CM3602)	+= capella_cm3602.o
