--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -665,6 +665,12 @@ config MACH_MSM7X30_FLUID
        help
          Support for the Qualcomm MSM7x30 FLUID eval board.
 
+config ARCH_MSM7X30_SMD
+       bool "Support QCT 7X30 SMD function"
+       default n
+       help
+         For QCT SMD function, we need 7x30 rpcrouter and smd drivers.
+
 config MACH_SAPPHIRE
 	depends on ARCH_MSM7X01A
 	default n
@@ -1608,6 +1614,14 @@ config MSM_RMT_STORAGE_CLIENT_STATS
 	  Collects performance statistics and shows this information
 	  through a debugfs file rmt_storage_stats.
 
+config MSM_RMT_STORAGE_SERVER
+	depends on (ARCH_MSM && MSM_ONCRPCROUTER)
+	default n
+	bool "Remote Storage RPC client"
+	help
+	  Provide RPC mechanism for remote processors to access storage
+	  device on apps processor.
+
 config MSM_SDIO_SMEM
         depends on MSM_SDIO_AL
         default n
@@ -1926,6 +1940,20 @@ config MSM_SYSMON_COMM
 	  This option adds support for MSM System Monitor library, which
 	  provides an API that may be used for notifying subsystems within
 	  the SoC about other subsystems' power-up/down state-changes.
+
+config SMD_OFFSET_TCXO_STAT
+	depends on MSM_SMD
+	hex "SMD offset of total TCXO-off time"
+	default 0x0
+	help
+          TCXO off time is in tick of sleep clock, 1/32768.
+
+config SMD_OFFSET_NEGATE_CLIENT_STAT
+        depends on MSM_SMD
+	hex "SMD offset of negate clinet stat"
+        default 0x0
+        help
+          TCXO shutdown retry conuter and negate tcxoc client counters.
 
 config MSM_PIL
 	bool "Peripheral image loading"
