input/touchscreen: add temp hacked vision atmel TS. Modify atmel header to work with this one too

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1010,6 +1010,12 @@ config TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE
 
 endif
 
+config TOUCHSCREEN_ATMEL
+	tristate "Atmel i2c touchscreen"
+	depends on I2C
+	help
+	  This enables support for Atmel over I2C based touchscreens.
+
 config TOUCHSCREEN_ATMEL_224E
 	tristate "Atmel i2c touchscreen"
 	depends on I2C
