vision: updated boards/defconfig. Still no display yet

--- a/arch/arm/configs/vision_defconfig
+++ b/arch/arm/configs/vision_defconfig
@@ -343,6 +343,7 @@ CONFIG_MSM_REMOTE_SPINLOCK_DEKKERS=y
 #
 # MSM Board Selection
 #
+CONFIG_ARCH_MSM7X30_SMD=y
 # CONFIG_MACH_MSM_DUMMY is not set
 
 #
@@ -408,39 +409,33 @@ CONFIG_MSM_PROC_COMM=y
 CONFIG_MSM_SMD=y
 # CONFIG_MSM_SMD_PKG3 is not set
 CONFIG_MSM_SMD_PKG4=y
-CONFIG_MSM_RPC_SDIO_XPRT=y
-CONFIG_MSM_RPC_SDIO_DEBUG=y
-CONFIG_MSM_SMD_DEBUG=y
-CONFIG_MSM_SDIO_AL=y
-# CONFIG_MSM_SDIO_DMUX is not set
+# CONFIG_MSM_SMD_DEBUG is not set
+# CONFIG_MSM_SDIO_AL is not set
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 # CONFIG_MSM_RESET_MODEM is not set
 CONFIG_MSM_SMD_LOGGING=y
 # CONFIG_MSM_IPC_LOGGING is not set
 # CONFIG_MSM_SMD_NMEA is not set
-# CONFIG_MSM_SDIO_TTY is not set
 # CONFIG_MSM_HSIC_TTY is not set
-CONFIG_MSM_SMD_TTY=y
+# CONFIG_MSM_SMD_TTY is not set
 # CONFIG_MSM_SMD_QMI is not set
-CONFIG_MSM_SMD_PKT=y
-# CONFIG_MSM_SDIO_CMUX is not set
+# CONFIG_MSM_SMD_PKT is not set
 CONFIG_MSM_ONCRPCROUTER=y
 # CONFIG_MSM_IPC_ROUTER is not set
-CONFIG_MSM_ONCRPCROUTER_DEBUG=y
+# CONFIG_MSM_ONCRPCROUTER_DEBUG is not set
 # CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
-# CONFIG_MSM_RPCSERVER_TIME_REMOTE is not set
-# CONFIG_MSM_RPCSERVER_WATCHDOG is not set
+CONFIG_MSM_RPCSERVER_TIME_REMOTE=y
+CONFIG_MSM_RPCSERVER_WATCHDOG=y
 # CONFIG_MSM_RPC_WATCHDOG is not set
 CONFIG_MSM_RPC_PING=y
-# CONFIG_MSM_RPC_PROC_COMM_TEST is not set
+CONFIG_MSM_RPC_PROC_COMM_TEST=y
 CONFIG_MSM_RPC_OEM_RAPI=y
-# CONFIG_MSM_RPCSERVER_HANDSET is not set
-CONFIG_MSM_RMT_STORAGE_CLIENT=y
-# CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
-# CONFIG_MSM_SDIO_SMEM is not set
+CONFIG_MSM_RPCSERVER_HANDSET=y
+# CONFIG_MSM_RMT_STORAGE_CLIENT is not set
+CONFIG_MSM_RMT_STORAGE_SERVER=y
 CONFIG_MSM_DALRPC=y
-CONFIG_MSM_DALRPC_TEST=m
+# CONFIG_MSM_DALRPC_TEST is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -461,7 +456,9 @@ CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_SUBSYSTEM_RESTART=y
-CONFIG_MSM_SYSMON_COMM=y
+# CONFIG_MSM_SYSMON_COMM is not set
+CONFIG_SMD_OFFSET_TCXO_STAT=0xFC2A0
+CONFIG_SMD_OFFSET_NEGATE_CLIENT_STAT=0xFC124
 CONFIG_MSM_PIL=y
 # CONFIG_MSM_PIL_MODEM is not set
 # CONFIG_MSM_PIL_QDSP6V3 is not set
@@ -475,12 +472,11 @@ CONFIG_MSM_PIL=y
 # CONFIG_MSM_PIL_VENUS is not set
 # CONFIG_MSM_PIL_GSS is not set
 # CONFIG_MSM_PIL_PRONTO is not set
-CONFIG_MSM_SCM=y
+# CONFIG_MSM_SCM is not set
 CONFIG_SCORPION_Uni_45nm_BUG=y
 # CONFIG_MSM_TZ_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_MSM_GPIOMUX=y
-CONFIG_MSM_NATIVE_RESTART=y
 CONFIG_MSM_MODEM_RESTART=y
 CONFIG_MSM_PM2=y
 # CONFIG_MSM_EVENT_TIMER is not set
@@ -507,13 +503,12 @@ CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_OCMEM is not set
 # CONFIG_MSM_RTB is not set
 # CONFIG_MSM_EBI_ERP is not set
-# CONFIG_MSM_DCVS is not set
 # CONFIG_MSM_CPR is not set
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
 # CONFIG_MSM_UARTDM is not set
-CONFIG_REMOVE_EBI1_FIXED_CLK=y
+# CONFIG_REMOVE_EBI1_FIXED_CLK is not set
 
 #
 # System MMU
@@ -1065,17 +1060,16 @@ CONFIG_NET_EMATCH_U32=y
 CONFIG_NET_EMATCH_META=y
 # CONFIG_NET_EMATCH_TEXT is not set
 CONFIG_NET_CLS_ACT=y
-CONFIG_NET_ACT_POLICE=y
-CONFIG_NET_ACT_GACT=y
-# CONFIG_GACT_PROB is not set
-CONFIG_NET_ACT_MIRRED=y
-CONFIG_NET_ACT_IPT=y
+# CONFIG_NET_ACT_POLICE is not set
+# CONFIG_NET_ACT_GACT is not set
+# CONFIG_NET_ACT_MIRRED is not set
+# CONFIG_NET_ACT_IPT is not set
 # CONFIG_NET_ACT_NAT is not set
-CONFIG_NET_ACT_PEDIT=y
+# CONFIG_NET_ACT_PEDIT is not set
 # CONFIG_NET_ACT_SIMP is not set
 # CONFIG_NET_ACT_SKBEDIT is not set
 # CONFIG_NET_ACT_CSUM is not set
-CONFIG_NET_CLS_IND=y
+# CONFIG_NET_CLS_IND is not set
 CONFIG_NET_SCH_FIFO=y
 # CONFIG_DCB is not set
 # CONFIG_BATMAN_ADV is not set
@@ -1499,7 +1493,7 @@ CONFIG_ATH6KL_SDIO=m
 #
 CONFIG_INPUT=y
 # CONFIG_INPUT_FF_MEMLESS is not set
-CONFIG_INPUT_POLLDEV=y
+# CONFIG_INPUT_POLLDEV is not set
 # CONFIG_INPUT_SPARSEKMAP is not set
 
 #
@@ -1509,7 +1503,7 @@ CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
-# CONFIG_INPUT_KEYRESET is not set
+CONFIG_INPUT_KEYRESET=y
 
 #
 # Input Device Drivers
@@ -1585,11 +1579,12 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+CONFIG_TOUCHSCREEN_ATMEL=y
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_TMA is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_3K is not set
-CONFIG_TOUCHSCREEN_CY8CTMA395=y
+# CONFIG_TOUCHSCREEN_CY8CTMA395 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -1613,42 +1608,20 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_ADXL34X is not set
 # CONFIG_INPUT_CMA3000 is not set
-CONFIG_PMIC8058_OTHC=y
+# CONFIG_PMIC8058_OTHC is not set
 # CONFIG_BOSCH_BMA150 is not set
 # CONFIG_STM_LIS3DH is not set
 # CONFIG_BMP18X is not set
-# CONFIG_SENSORS_AKM8975 is not set
+CONFIG_SENSORS_AKM8975=y
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
 # CONFIG_SENSORS_BMA250 is not set
 # CONFIG_INPUT_CAPELLA_CM3629 is not set
 # CONFIG_SENSORS_R3GD20 is not set
-CONFIG_INPUT_LSM303DLH=y
-CONFIG_INPUT_ISL29023=y
-CONFIG_MPU_SENSORS_MPU3050=y
-# CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
-# CONFIG_MPU_SENSORS_ADXL346 is not set
-CONFIG_MPU_SENSORS_BMA150=y
-# CONFIG_MPU_SENSORS_BMA250 is not set
-# CONFIG_MPU_SENSORS_BMA222 is not set
-# CONFIG_MPU_SENSORS_KXSD9 is not set
-# CONFIG_MPU_SENSORS_KXTF9 is not set
-# CONFIG_MPU_SENSORS_LIS331DLH is not set
-# CONFIG_MPU_SENSORS_LIS3DH is not set
-# CONFIG_MPU_SENSORS_LSM303DLHA is not set
-# CONFIG_MPU_SENSORS_MMA8450 is not set
-# CONFIG_MPU_SENSORS_MMA845X is not set
-# CONFIG_MPU_SENSORS_COMPASS_NONE is not set
-CONFIG_MPU_SENSORS_AK8975=y
-# CONFIG_MPU_SENSORS_AK8963 is not set
-# CONFIG_MPU_SENSORS_MMC314X is not set
-# CONFIG_MPU_SENSORS_AMI30X is not set
-# CONFIG_MPU_SENSORS_HMC5883 is not set
-# CONFIG_MPU_SENSORS_LSM303DLHM is not set
-# CONFIG_MPU_SENSORS_YAS529 is not set
-# CONFIG_MPU_SENSORS_HSCDTD002B is not set
-# CONFIG_MPU_SENSORS_HSCDTD004A is not set
+# CONFIG_INPUT_ISL29023 is not set
+CONFIG_LIGHTSENSOR_MICROP=y
+CONFIG_INPUT_CAPELLA_CM3602=y
+# CONFIG_MPU_SENSORS_MPU3050 is not set
 # CONFIG_MPU_SENSORS_TIMERIRQ is not set
-# CONFIG_MPU_SENSORS_DEBUG is not set
 
 #
 # Hardware I/O ports
@@ -1714,7 +1687,6 @@ CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 #
 # SDIO support for DIAG
 #
-CONFIG_DIAG_SDIO_PIPE=y
 
 #
 # HSIC/SMUX support for DIAG
@@ -1749,7 +1721,7 @@ CONFIG_I2C_HELPER_AUTO=y
 #
 # CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_GPIO is not set
-# CONFIG_I2C_MSM is not set
+CONFIG_I2C_MSM=y
 CONFIG_I2C_QUP=y
 CONFIG_I2C_SSBI=y
 # CONFIG_I2C_OCORES is not set
@@ -2584,7 +2556,7 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
 CONFIG_USB_SUSPEND=y
-# CONFIG_USB_OTG is not set
+CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_DWC3 is not set
@@ -2609,7 +2581,7 @@ CONFIG_USB_EHCI_MSM_72K=y
 # CONFIG_USB_EHCI_HCD_PLATFORM is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
-CONFIG_USB_PEHCI_HCD=y
+# CONFIG_USB_PEHCI_HCD is not set
 # CONFIG_USB_MUSB_HDRC is not set
 
 #
@@ -2789,7 +2761,7 @@ CONFIG_RMNET_SMD_DATA_CHANNEL=""
 # OTG and related infrastructure
 #
 CONFIG_USB_OTG_UTILS=y
-# CONFIG_USB_OTG_WAKELOCK is not set
+CONFIG_USB_OTG_WAKELOCK=y
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ULPI is not set
 CONFIG_USB_MSM_OTG_72K=y
