--- a/arch/arm/mach-msm/htc/vision/Makefile
+++ b/arch/arm/mach-msm/htc/vision/Makefile
@@ -1,2 +1,5 @@
 obj-$(CONFIG_MACH_VISION) += board-vision.o
+obj-$(CONFIG_MACH_VISION) += board-vision-keypad.o
+obj-$(CONFIG_MACH_VISION) += board-vision-microp.o
+obj-$(CONFIG_MACH_VISION) += board-vision-regulator.o
 obj-$(CONFIG_MACH_VISION) += display/
