--- a/arch/arm/mach-msm/htc/Makefile
+++ b/arch/arm/mach-msm/htc/Makefile
@@ -24,6 +24,8 @@ obj-$(CONFIG_HTC_BATT_CORE) += htc_battery_core.o
 obj-$(CONFIG_HTC_BATT_8x60) += htc_battery_8x60.o
 obj-$(CONFIG_HTC_BATT_8960) += htc_battery_8960.o htc_battery_cell.o
 obj-$(CONFIG_MSM_NATIVE_RESTART) += htc_restart_handler.o
+obj-$(CONFIG_HTC_BATTCHG) += htc_battery.o
+obj-$(CONFIG_HTC_BATTCHG_MAX8957) += htc_battery_max8957.o
 
 obj-$(CONFIG_HTC_HEADSET_MGR) += htc_headset_mgr.o
 obj-$(CONFIG_HTC_HEADSET_GPIO) += htc_headset_gpio.o
