--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -97,6 +97,11 @@ config BATTERY_DS2782
 	  Say Y here to enable support for the DS2782/DS2786 standalone battery
 	  gas-gauge.
 
+config BATTERY_DS2746
+        tristate "DS2746 battery driver "
+        help
+          Say Y here to enable support for batteries with ds2746 chip.
+
 config BATTERY_PMU
 	tristate "Apple PMU battery"
 	depends on PPC32 && ADB_PMU
